# myvitals

./: .env.example  .gitignore  CLAUDE.md  README.md  TODO.md  docker-compose.yml
backend/: Dockerfile  THIRD_PARTY_LICENSES.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_app_logs.py  0003_strava.py  0004_strava_app_config.py  0005_activity_notes_tags.py  0006_body_metrics.py  0007_blood_pressure.py  0008_daily_summary_new_metrics.py  0009_import_jobs.py  0010_user_profile.py  0011_advanced_analytics.py  0012_sleep_sessions.py  0013_workouts_source.py  0014_sync_heartbeat.py  0015_sober_streaks.py  0016_ai_summaries.py  0017_ai_default_haiku.py  0018_ai_tone_goals.py  0019_ai_alerts.py  0020_call_limit_30.py  0021_strength_tables.py  0022_ai_summaries_widen_range_kind.py  0023_trails.py  0024_trail_location.py  0025_activity_trail_link.py  0026_trail_osm_paths.py  0027_trail_status_config.py  0028_steps_source.py  0029_concept2_credentials.py  0030_concept2_webhook_secret.py  0031_strength_workout_completed_by_activity.py  0032_user_profile_home_location.py  0033_device_status.py  0034_fasting_sessions.py  0035_daily_summary_fasting_hours.py  0036_ha_config.py  0037_user_profile_fasting_target.py  0038_strava_cookie_creds.py  0039_strava_cookie_auto_login.py  0040_strava_cookie_key_in_db.py  (+3 more)
backend/src/myvitals/: auth.py  config.py  (+3 more)
backend/tests/: conftest.py  test_ai_privacy.py  test_analytics.py  test_auth.py  test_quota.py  test_strength_generator.py  test_strength_recovery.py  test_strength_rounder.py
(+304 files in other folders)
